# mac-cleaner

./: Makefile  README.md  pyproject.toml
maccleaner/: __init__.py  __main__.py  cli.py
maccleaner/analyzers/: __init__.py  app_analyzer.py
maccleaner/cleaners/: __init__.py  brew.py  docker.py  git.py  k8s.py  maven.py  npm.py  python.py  simulator.py  xcode.py
maccleaner/core/: __init__.py  analyzer.py  cleaner.py  utils.py
tests/: __init__.py  test_core.py
