[tool.poetry]
name = "maccleaner"
version = "0.1.0"
description = "A utility to clean unused files from various tech stacks on macOS"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "maccleaner"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
maccleaner = "maccleaner.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py36"]

[tool.isort]
profile = "black"
line_length = 88 